<resources>
    <string name="app_name">RemoteController</string>
    <string name="version">v1.0.0</string>
    <string name="idFA2">ID FA2</string>
    <string name="idFA">ID FA</string>
    <string name="alarm_fa2">Alarm FA2</string>
    <string name="alarm_fa">Alarm FA</string>
    <string name="rlc_calc">RLC Calc</string>
    <string name="inductance">Inductance</string>
    <string name="calculator">Calculator</string>
    <string name="uh">uH</string>
    <string name="r">R</string>
    <string name="resistance">Resistance</string>
    <string name="uc">uC</string>
    <string name="capacitance">Capacitance</string>
    <string name="hz">Hz</string>
    <string name="frequency">Frequency</string>
    <string name="tone_generator">Tone Generator</string>
    <string name="m1">M1</string>
    <string name="m2">M2</string>
    <string name="m3">M3</string>
    <string name="tone_gen">tone gen</string>
</resources>