<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ToneGenerator">

    <SeekBar
        android:id="@+id/seekBarFrequency"
        android:layout_width="201dp"
        android:layout_height="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textFrequency" />

    <TextView
        android:id="@+id/textFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/frequency"
        app:layout_constraintStart_toStartOf="@+id/seekBarFrequency"
        app:layout_constraintTop_toBottomOf="@+id/titleToneActivity" />

    <TextView
        android:id="@+id/titleToneActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tone_generator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/butToneM1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/m1"
        app:layout_constraintStart_toStartOf="@+id/seekBarFrequency"
        app:layout_constraintTop_toBottomOf="@+id/seekBarFrequency" />

    <Button
        android:id="@+id/butToneM2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/m2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/butToneM1" />

    <Button
        android:id="@+id/butToneM3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/m3"
        app:layout_constraintEnd_toEndOf="@+id/seekBarFrequency"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/butToneM1" />

    <EditText
        android:id="@+id/editCurrentFreq"
        android:layout_width="65dp"
        android:layout_height="41dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hz"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/seekBarFrequency"
        app:layout_constraintTop_toTopOf="@+id/textFrequency" />

</androidx.constraintlayout.widget.ConstraintLayout>